--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,6 +9,19 @@
     <title>Jornada Viagens</title>
   </head>
   <body>
-    
+    <header>
+      <a href="index.html" title="voltar para a pagina incial">
+        <img src="img/bussula-jornada-branca.png" alt="bussula do logo jornada viagens na cor preta">
+      </a>
+      <img src="img/menu.png" alt="menu">
+
+      <nav>
+        <ul>
+          <li><a href="blog.html" target="_blank" title="Acessar blog">Blog</a></li>
+          <li><a href="pacotes.html" target="_blank" title="Acessar pacotes de viagem">Pacotes de viagem</a></li>
+          <li><a href="contato.html" target="_blank" title="Acessar Contato">Contato</a></li>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
