adiciona estilos ao header

--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.css">
 
     <title>Jornada Viagens</title>
   </head>
   <body>
     <header>
-      <a href="index.html" title="voltar para a pagina incial">
+      <a class="logo" href="index.html" title="voltar para a pagina incial">
         <img src="img/bussula-jornada-branca.png" alt="bussula do logo jornada viagens na cor preta">
       </a>
       <img src="img/menu.png" alt="menu">
