--- a/index.html
+++ b/index.html
@@ -2,26 +2,36 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
 
     <title>Jornada Viagens</title>
   </head>
   <body>
     <header>
       <a class="logo" href="index.html" title="voltar para a pagina incial">
-        <img src="img/bussula-jornada-branca.png" alt="bussula do logo jornada viagens na cor preta">
+        <img src="img/bussula-jornada-branca.png" alt="bussula do logo jornada viagens na cor preta"/>
       </a>
-      <img src="img/menu.png" alt="menu">
 
-      <nav>
-        <ul>
-          <li><a href="blog.html" target="_blank" title="Acessar blog">Blog</a></li>
-          <li><a href="pacotes.html" target="_blank" title="Acessar pacotes de viagem">Pacotes de viagem</a></li>
-          <li><a href="contato.html" target="_blank" title="Acessar Contato">Contato</a></li>
-        </ul>
-      </nav>
+      <div class="navigation-menu">
+        <img src="img/menu.png" alt="menu" />
+        <nav>
+          <ul>
+            <li>
+              <a href="blog.html" target="_blank" title="Acessar blog">Blog</a>
+            </li>
+            <li>
+              <a href="pacotes.html" target="_blank" title="Acessar pacotes de viagem">Pacotes de viagem</a>
+            </li>
+            <li>
+              <a href="contato.html" target="_blank" title="Acessar Contato">Contato</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+
     </header>
+
   </body>
 </html>
