Finaliza estilização do header

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <body>
     <header>
       <a class="logo" href="index.html" title="voltar para a pagina incial">
-        <img src="img/bussula-jornada-branca.png" alt="bussula do logo jornada viagens na cor preta"/>
+        <img class="img-mobile" src="img/bussula-jornada-branca.png" alt="bussula do logo jornada viagens na cor branco"/>
+        <img class="img-desktop" src="img/bussula-texto-jornada-branco.png" alt="Logo jornada viagens na cor branco"/>
       </a>
 
       <div class="navigation-menu">
