--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           class="img-mobile"
           src="img/bussula-jornada-branca.png"
           alt="bussula do logo jornada viagens na cor branco"/>
-          
+
         <img
           class="img-desktop"
           src="img/bussula-texto-jornada-branco.png"
@@ -61,6 +61,18 @@
       <div class="section-title">
         <h2>Ofertas da Semana</h2>
         <hr/>
+      </div>
+
+      <div class="offers-cards">
+        <article class="card">
+          <header>
+            <p>HOTEL+AÉREO</p>
+            <h3>Japão <br> <span>R$ 4000</span></h3>
+          </header>
+          <footer>
+            <a href="#" class="button">Ver detalhes</a>
+          </footer>
+        </article>
       </div>
     </section>
 
