--- a/index.html
+++ b/index.html
@@ -285,5 +285,29 @@
         </article>
       </div>
     </section>
+
+    <section class="bottom-hero">
+      <div class="hero-img"></div>
+    </section>
+
+    <footer class="main-footer">
+      <div class="footer-content">
+        <img src="img/logo-footer.png" alt="logo completo Jornada Viagens">
+
+        <p>Horário de atendimento: 08h - 20h (Segunda a Sábado)</p>
+
+        <p>Desenvolvido por Alura. Projeto fictício sem fins comerciais.</p>
+      </div>
+
+      <div class="footer-social">
+        <p>Acesse nossas redes sociais:</p>
+
+        <a href="#" target="_blank" title="Acesse o whatsapp do Jornada Viagens"><img src="img/icon-whatsapp.png" alt="icone do whatsapp na cor branca"></a>
+
+        <a href="#" target="_blank" title="Acesse o instagram do Jornada Viagens"><img src="img/icon-instagram.png" alt="icone do instagram na cor branca"></a>
+
+        <a href="#" target="_blank" title="Acesse o instagram do Jornada Viagens"><img src="img/icon-twiter.png" alt="icone do twiter na cor branca"></a>
+      </div>
+    </footer>
   </body>
 </html>
